--- a/EyeOfOldDriver/app/src/main/res/values/strings.xml
+++ b/EyeOfOldDriver/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="formula">运算</string>
+    <string name="formula">四则运算</string>
 </resources>
