--- a/EyeOfOldDriver/app/src/main/res/values/strings.xml
+++ b/EyeOfOldDriver/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="formula">四则运算</string>
+    <string name="ack_button">确认</string>
 </resources>
