修正图片显示部分
图片显示部分的修正

--- a/EyeOfOldDriver/app/src/main/res/values/strings.xml
+++ b/EyeOfOldDriver/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="formula">四则运算</string>
     <string name="ack_button">确认</string>
+    <string name="calculate">计算</string>
 </resources>
