--- a/EyeOfOldDriver/app/src/main/res/values/strings.xml
+++ b/EyeOfOldDriver/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="formula">四则运算</string>
+    <string name="su_do_ku">数独</string>
     <string name="ack_button">确认</string>
     <string name="calculate">计算</string>
 </resources>
