将bitmap转换成32*32的01矩阵
已经能够将照片转换到01矩阵

--- a/EyeOfOldDriver/app/src/main/res/values/strings.xml
+++ b/EyeOfOldDriver/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="formula">四则运算</string>
     <string name="su_do_ku">数独</string>
+    <string name="retry_button">式子不正确？</string>
     <string name="ack_button">确认</string>
     <string name="calculate">计算</string>
 </resources>
