--- a/EyeOfOldDriver/app/src/main/res/values/strings.xml
+++ b/EyeOfOldDriver/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="add_button">添加方程</string>
     <string name="calculate">计算</string>
     <string name="retake_button">重拍</string>
+    <string name="return_button">返回首页</string>
 </resources>
